Добавлены методы необходимые для хода фигур.